fixed zooming issues on mobile, took out the horizontal menu for now, will probably just use verticle, with scrolling option for zoomed in screens.

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,10 @@
 code {
   font-family: monospace; }
 
+@media (min-width: 1px) and (max-width: 767px) and (pointer: coarse) {
+  html {
+    font-size: 2.15vh; } }
+
 body {
   font-size: 1rem;
   letter-spacing: 0.4px; }
@@ -201,45 +205,6 @@ section {
   #nav-section .social-row {
     border-top: 2px solid #1f3d45;
     border-bottom: 2px solid #1f3d45; }
-  @media (max-height: 550px) {
-    #nav-section {
-      height: auto;
-      width: 100%;
-      border-left: none;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px; }
-      #nav-section a:hover {
-        border-bottom: none !important; }
-      #nav-section h1:first-of-type {
-        font-size: 2rem;
-        padding: 30px !important;
-        margin-bottom: 10px;
-        text-align: center;
-        border-bottom: none !important; }
-        #nav-section h1:first-of-type a {
-          border-bottom: 2px solid #1f3d45; }
-      #nav-section .nav-row {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px; }
-        #nav-section .nav-row p {
-          margin: 0 10px;
-          padding: 10px 10px; }
-      #nav-section .social-row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-top: none;
-        border-bottom: none; }
-        #nav-section .social-row p {
-          margin: 0 10px; }
-          #nav-section .social-row p:last-of-type {
-            border: none;
-            border-bottom: 1px solid #1f3d45; }
-        #nav-section .social-row #social-media {
-          margin-top: 0; } }
   #nav-section h1:first-of-type {
     font-size: 3rem;
     color: #73a8b7ff;
@@ -267,12 +232,8 @@ section {
 
 .off-screen-menu {
   top: 0;
-  right: -100%;
+  right: -200%;
   transition: 0.3s ease; }
-  @media (max-height: 550px) {
-    .off-screen-menu {
-      top: -100%;
-      right: 0; } }
 
 .off-screen-menu.active {
   right: 0 !important;
@@ -365,7 +326,7 @@ section {
     width: 100%;
     object-fit: cover;
     opacity: 0.8; }
-    @media (min-width: 1px) and (max-width: 767px) {
+    @media (min-width: 1px) and (max-width: 767px) and (pointer: coarse) {
       #hero img {
         object-position: 60% 50%; } }
   #hero > div:first-child {
@@ -376,9 +337,8 @@ section {
     left: 8%; }
   #hero h1 {
     text-transform: uppercase;
-    color: #a6cdd7;
-    font-size: 3vw; }
-    @media (min-width: 1px) and (max-width: 767px) {
+    color: #a6cdd7; }
+    @media (min-width: 1px) and (max-width: 767px) and (pointer: coarse) {
       #hero h1 {
         font-size: 2.4rem; } }
     @media (min-width: 768px) {
@@ -392,7 +352,7 @@ section {
         font-size: 5rem; } }
   #hero p {
     text-transform: uppercase; }
-    @media (min-width: 1px) and (max-width: 767px) {
+    @media (min-width: 1px) and (max-width: 767px) and (pointer: coarse) {
       #hero p {
         font-size: 1.4rem; } }
     @media (min-width: 768px) {
@@ -509,7 +469,7 @@ textarea {
   textarea::placeholder {
     color: #90908a; }
 
-@media (min-width: 1px) and (max-width: 767px) {
+@media (min-width: 1px) and (max-width: 767px) and (pointer: coarse) {
   .contact-container {
     display: flex;
     flex-direction: column;
