--- a/scss/0.base/_5.mixins.scss
+++ b/scss/0.base/_5.mixins.scss
@@ -54,7 +54,7 @@
 
 @mixin mq($break) {
   @if $break == "xsmall" {
-    @media (min-width: $brkpoint-xsm) and (max-width: $brkpoint-sm) {
+    @media (min-width: $brkpoint-xsm) and (max-width: $brkpoint-sm) and (pointer: coarse) {
       @content;
     }
   } @else if $break == "small" {
