--- a/scss/1.layout/_2.nav.scss
+++ b/scss/1.layout/_2.nav.scss
@@ -63,80 +63,80 @@ section {
     border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
   }
 
-  @media (max-height: 550px) {
-    height: auto;
-    width: 100%;
-    border-left: none;
-    //border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
+  // @media (max-height: 550px) {
+  //   height: auto;
+  //   width: 100%;
+  //   border-left: none;
+  //   //border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   padding: 10px;
 
-    a:hover {
-      border-bottom: none !important;
-    }
+  //   a:hover {
+  //     border-bottom: none !important;
+  //   }
 
-    h1:first-of-type {
-      font-size: 2rem;
-      padding: 30px !important;
-      margin-bottom: 10px;
-      text-align: center;
-      border-bottom: none !important;
+  //   h1:first-of-type {
+  //     font-size: 2rem;
+  //     padding: 30px !important;
+  //     margin-bottom: 10px;
+  //     text-align: center;
+  //     border-bottom: none !important;
 
-      a {
-        border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
-      }
-    }
+  //     a {
+  //       border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
+  //     }
+  //   }
 
-    .nav-container {
-      //   border-left: 1px solid darken(color(blue-munsell-3), 25%);
-      //   border-right: 1px solid darken(color(blue-munsell-3), 25%);
-    }
+  //   .nav-container {
+  //     //   border-left: 1px solid darken(color(blue-munsell-3), 25%);
+  //     //   border-right: 1px solid darken(color(blue-munsell-3), 25%);
+  //   }
 
-    .nav-row {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 10px;
+  //   .nav-row {
+  //     display: flex;
+  //     justify-content: center;
+  //     margin-bottom: 10px;
 
-      //   border-left: 2px solid darken(color(blue-munsell-3), 25%);
-      //   border-right: 2px solid darken(color(blue-munsell-3), 25%);
-      p {
-        margin: 0 10px;
-        // border-left: 2px solid darken(color(blue-munsell-3), 25%);
-        // border-right: 2px solid darken(color(blue-munsell-3), 25%);
-        // border-bottom: 1px solid darken(color(blue-munsell-3), 25%);
-        padding: 10px 10px;
+  //     //   border-left: 2px solid darken(color(blue-munsell-3), 25%);
+  //     //   border-right: 2px solid darken(color(blue-munsell-3), 25%);
+  //     p {
+  //       margin: 0 10px;
+  //       // border-left: 2px solid darken(color(blue-munsell-3), 25%);
+  //       // border-right: 2px solid darken(color(blue-munsell-3), 25%);
+  //       // border-bottom: 1px solid darken(color(blue-munsell-3), 25%);
+  //       padding: 10px 10px;
 
-        &:last-of-type {
-          // border: none;
-        }
-      }
-    }
+  //       &:last-of-type {
+  //         // border: none;
+  //       }
+  //     }
+  //   }
 
-    .social-row {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  //   .social-row {
+  //     display: flex;
+  //     justify-content: center;
+  //     align-items: center;
 
-      border-top: none;
-      border-bottom: none;
-      //border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
+  //     border-top: none;
+  //     border-bottom: none;
+  //     //border-bottom: 2px solid darken(color(blue-munsell-3), 25%);
 
-      p {
-        margin: 0 10px;
+  //     p {
+  //       margin: 0 10px;
 
-        &:last-of-type {
-          border: none;
-          border-bottom: 1px solid darken(color(blue-munsell-3), 25%);
-        }
-      }
+  //       &:last-of-type {
+  //         border: none;
+  //         border-bottom: 1px solid darken(color(blue-munsell-3), 25%);
+  //       }
+  //     }
 
-      #social-media {
-        margin-top: 0;
-      }
-    }
-  }
+  //     #social-media {
+  //       margin-top: 0;
+  //     }
+  //   }
+  // }
 
   h1 {
     &:first-of-type {
@@ -189,13 +189,13 @@ section {
 .off-screen-menu {
   top: 0;
   //right: -250px;
-  right: -100%;
+  right: -200%;
   transition: 0.3s ease;
 
-  @media (max-height: 550px) {
-    top: -100%;
-    right: 0;
-  }
+  // @media (max-height: 550px) {
+  //   top: -100%;
+  //   right: 0;
+  // }
 }
 
 .off-screen-menu.active {
