--- a/scss/1.layout/_3.hero.scss
+++ b/scss/1.layout/_3.hero.scss
@@ -42,7 +42,6 @@
   h1 {
     text-transform: uppercase;
     color: lighten(color(blue-munsell-3), 30%);
-    font-size: 3vw;
 
     @include mq(xsmall) {
       // font-size: 6.6vw;
